--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,32 @@ header .retour {
   padding: 10px;
 }
 
+.full-heart {
+  opacity: 0;
+  background: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: all 400ms;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+}
+.full-heart:hover {
+  opacity: 1;
+}
+.full-heart:active {
+  opacity: 1;
+}
+
+.heart {
+  opacity: 1;
+}
+.heart:hover {
+  opacity: 0;
+}
+.heart:active {
+  opacity: 0;
+}
+
 .restaurants {
   display: flex;
   flex-direction: column;
@@ -189,8 +215,9 @@ header .retour {
 }
 .restaurants .card-restau i {
   position: absolute;
-  top: 210px;
+  top: 200px;
   right: 20px;
+  font-size: 22px;
 }
 .restaurants .badge {
   position: absolute;
@@ -260,9 +287,10 @@ footer {
 }
 .main-container > i {
   position: absolute;
-  top: 258px;
+  top: 274px;
   right: 35px;
   z-index: 1;
+  font-size: 22px;
 }
 
 .image-restau {
@@ -310,27 +338,63 @@ footer {
   background-color: #99E2D0;
 }
 
-.plat {
+.card-plat {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+.card-plat:hover .plat {
+  width: 85%;
+}
+.card-plat:hover .check {
+  right: 0px;
+}
+.card-plat:hover p, .card-plat:hover h2 {
+  width: 230px;
+}
+.card-plat .plat {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   width: 100%;
   height: 70px;
-  background-color: white;
   padding: 0px 15px;
   position: relative;
-  border-radius: 15px;
   gap: 5px;
-  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+  transition: width 0.3s;
 }
-.plat h2 {
+.card-plat .plat h2 {
   font-weight: 500;
   margin-bottom: 0px;
 }
-.plat .prix {
+.card-plat .plat p, .card-plat .plat h2 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.card-plat .plat .prix {
   position: absolute;
   right: 15px;
-  top: 30px;
+  top: 40px;
+}
+.card-plat .check {
+  width: 60px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(153, 226, 208);
+  position: absolute;
+  right: -60px;
+  z-index: 2;
+  transition: all 0.3s;
 }
 
 .commander {
