--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -177,6 +177,33 @@ $light-grey: rgb(246,246,246);
 
 }
 
+.full-heart{
+    opacity: 0;
+    background: linear-gradient(#FF79DA, #9356DC);
+    background-clip: text;
+    -webkit-background-clip: text;
+    transition: all 400ms;
+    -webkit-text-fill-color: transparent;
+    color:transparent;
+    &:hover {
+        opacity: 1;
+    }
+
+    &:active {
+        opacity: 1;
+    }
+}
+
+.heart{
+    opacity: 1;
+    &:hover {
+        opacity: 0;
+    }
+    &:active {
+        opacity: 0;
+    }
+}
+
 .restaurants{
     display: flex;
     flex-direction: column;
@@ -200,8 +227,9 @@ $light-grey: rgb(246,246,246);
 
         i {
             position : absolute;
-            top :210px;
+            top :200px;
             right: 20px;
+            font-size: 22px;
         }
         
     }
@@ -287,9 +315,10 @@ $light-grey: rgb(246,246,246);
         position:relative;
         &>i{
             position: absolute;
-            top:258px;
+            top:274px;
             right:35px;
             z-index: 1;
+            font-size: 22px;
         }
     }
     .image-restau{
@@ -342,31 +371,74 @@ $light-grey: rgb(246,246,246);
     }
 }
 
+
+.card-plat{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.10);
+    position: relative;
+
+    &:hover{
+        .plat{
+        width:85%;
+    }
+        .check{
+            right:0px;
+        }
+        p,h2{
+            width:230px;
+
+        }
+    }
+
 .plat{
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     width: 100%;
     height: 70px;
-    background-color: white;
     padding: 0px 15px;
     position: relative;
-    border-radius: 15px;
     gap:5px;
-    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.10);
+    transition: width 0.3s;
 
     h2{
         font-weight: 500; 
         margin-bottom:0px;
     }
 
+    p,h2{
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+
+    }
+
     .prix{
         position: absolute;
         right : 15px;
-        top:30px;
+        top:40px;
     }
 }
-
+.check{
+    width: 60px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(153, 226, 208, 1); 
+    position: absolute;
+    right: -60px;
+    z-index: 2;
+    transition: all 0.3s;
+}
+}
 .commander{
     display: flex;
     justify-content: center;
