--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
   font-family: "Roboto", sans-serif;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   opacity: 0.2;
 }
 
@@ -14,7 +15,7 @@ body {
 button {
   height: 50px;
   border-radius: 25px;
-  background: var(--button-gradient, linear-gradient(0deg, #9356DC 0%, #FF79DA 100%));
+  background: var(--button-gradient, linear-gradient(0deg, #9356dc 0%, #ff79da 100%));
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   color: white;
   text-align: center;
@@ -101,7 +102,8 @@ header .retour {
   gap: 10px;
   background-color: rgb(246, 246, 246);
 }
-.explorer h1, .explorer h2 {
+.explorer h1,
+.explorer h2 {
   text-align: center;
   margin: 0px;
 }
@@ -109,7 +111,7 @@ header .retour {
   color: var(--grey, #353535);
 }
 .explorer button {
-  width: 60%;
+  width: 220px;
   margin-top: 20px;
   margin-bottom: 60px;
 }
@@ -153,8 +155,8 @@ header .retour {
   width: 24px;
   height: 24px;
   border-radius: 24px;
-  background: var(--primary, #9356DC);
-  color: var(--white, #FFF);
+  background: var(--primary, #9356dc);
+  color: var(--white, #fff);
   font-size: 14px;
   font-weight: 500;
   position: relative;
@@ -168,7 +170,7 @@ header .retour {
 
 .full-heart {
   opacity: 0;
-  background: linear-gradient(#FF79DA, #9356DC);
+  background: linear-gradient(#ff79da, #9356dc);
   background-clip: text;
   -webkit-background-clip: text;
   transition: all 400ms;
@@ -210,8 +212,9 @@ header .retour {
   width: 100%;
   height: 250px;
   border-radius: 15px;
-  background: #FFF;
+  background: #fff;
   position: relative;
+  display: block;
 }
 .restaurants .card-restau i {
   position: absolute;
@@ -232,7 +235,7 @@ header .retour {
   width: 80px;
   height: 30px;
   border-radius: 2px;
-  background: var(--green, #99E2D0);
+  background: var(--green, #99e2d0);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .restaurants img {
@@ -242,7 +245,7 @@ header .retour {
   border-radius: 15px 15px 0px 0px;
 }
 .restaurants .card_text {
-  width: 170px;
+  padding: 0px;
 }
 .restaurants .card_text > h1 {
   font-size: 18px;
@@ -269,7 +272,7 @@ footer {
 }
 .footer-list svg {
   width: 100px;
-  height: 27px;
+  height: 20px;
   padding-bottom: 15px;
   fill: rgb(255, 255, 255);
 }
@@ -280,6 +283,10 @@ footer {
 }
 .footer-list li {
   margin-bottom: 10px;
+}
+
+.footer-list-bold {
+  font-weight: 500;
 }
 
 .main-container {
@@ -335,7 +342,7 @@ footer {
   margin-top: 5px;
   width: 40px;
   height: 3px;
-  background-color: #99E2D0;
+  background-color: #99e2d0;
 }
 
 .card-plat {
@@ -350,22 +357,24 @@ footer {
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
   position: relative;
 }
-.card-plat:hover .plat {
-  width: 85%;
+.card-plat:hover .plat .prix {
+  right: 75px;
 }
 .card-plat:hover .check {
   right: 0px;
 }
-.card-plat:hover p, .card-plat:hover h2 {
+.card-plat:hover p,
+.card-plat:hover h2 {
   width: 230px;
 }
-.card-plat:active .plat {
-  width: 85%;
+.card-plat:active .plat .prix {
+  right: 75px;
 }
 .card-plat:active .check {
   right: 0px;
 }
-.card-plat:active p, .card-plat:active h2 {
+.card-plat:active p,
+.card-plat:active h2 {
   width: 230px;
 }
 .card-plat .plat {
@@ -377,13 +386,13 @@ footer {
   padding: 0px 15px;
   position: relative;
   gap: 5px;
-  transition: width 0.3s;
 }
 .card-plat .plat h2 {
   font-weight: 500;
   margin-bottom: 0px;
 }
-.card-plat .plat p, .card-plat .plat h2 {
+.card-plat .plat p,
+.card-plat .plat h2 {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -392,6 +401,7 @@ footer {
   position: absolute;
   right: 15px;
   top: 40px;
+  transition: right 0.3s;
 }
 .card-plat .check {
   width: 60px;
@@ -412,7 +422,85 @@ footer {
   align-items: center;
 }
 .commander button {
-  width: 50%;
+  width: 185px;
+}
+
+@media (min-width: 1080px) {
+  .explorer {
+    gap: 20px;
+  }
+  .explorer button {
+    margin-top: 5px;
+  }
+  .tuto {
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+  .tuto .card-list {
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+  }
+  .restaurants h1 {
+    margin-right: 180px;
+    margin-left: 180px;
+  }
+  .restaurants .card-list {
+    margin-right: 10%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 100px;
+  }
+  .restaurants .card-restau {
+    width: 44%;
+  }
+  .footer-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 20px;
+  }
+  .footer-list .logo {
+    order: 1;
+    padding-left: 30px;
+  }
+  .footer-list li {
+    order: 0;
+  }
+  .footer-list .footer-list-bold {
+    padding-right: 15px;
+    gap: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+  .card-plat:hover p,
+  .card-plat:hover h2 {
+    width: 100%;
+  }
+  .card-plat:active p,
+  .card-plat:active h2 {
+    width: 100%;
+  }
+  .card-plat .menu {
+    width: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .card-plat .menu .menu-title {
+    display: flex;
+    justify-content: center;
+  }
+  .card-plat .menu .repas {
+    padding-left: 210px;
+    padding-right: 210px;
+  }
+  .card-plat .main-container > i {
+    right: 455px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
