--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ p {
 
 a {
   text-decoration: none;
+  color: black;
 }
 a:visited {
   color: inherit;
@@ -484,21 +485,21 @@ footer {
   .card-plat:active h2 {
     width: 100%;
   }
-  .card-plat .menu {
+  .menu {
     width: 75%;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
-  .card-plat .menu .menu-title {
+  .menu .menu-title {
     display: flex;
     justify-content: center;
   }
-  .card-plat .menu .repas {
+  .menu .repas {
     padding-left: 210px;
     padding-right: 210px;
   }
-  .card-plat .main-container > i {
+  .main-container > i {
     right: 455px;
   }
 }
